--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@ site_url: https://jiwool0920.github.io
 site_description: Infrastructure, AI, and Engineering Patterns
 site_author: Jiwoo Lee
 
-repo_url: https://github.com/jiwool0920/jiwool0920.github.io
-repo_name: jiwool0920.github.io
+repo_url: https://github.com/JiwooL0920
+repo_name: JiwooL0920
 
 theme:
   name: material
