--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,9 @@ nav:
   - Blog:
       - blog/index.md
 
+extra_css:
+  - stylesheets/extra.css
+
 extra:
   social:
     - icon: fontawesome/brands/github
