--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,13 +10,13 @@ theme:
   name: material
   palette:
     - scheme: slate
-      primary: black
+      primary: indigo
       accent: cyan
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
     - scheme: default
-      primary: black
+      primary: indigo
       accent: cyan
       toggle:
         icon: material/brightness-7
