chore: fix headline

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Jiwoo Lee | AI Platform Engineer
+site_name: Jiwoo Lee | Technical Blog
 site_url: https://jiwool0920.github.io
 site_description: Infrastructure, AI, and Engineering Patterns
 site_author: Jiwoo Lee
